syntax = "proto3";

option csharp_namespace = "MonitorClient";

package monitor;

service CounterService {
  //Get stream of dotnet event counters for the process
  rpc GetCounterStream (CounterStreamRequest) returns (stream CounterValue);
}

message CounterStreamRequest {
  int32 process_id = 1;
}

enum CounterType {
  METRIC = 0;
  RATE = 1;
}

message CounterValue {
  string timestamp = 1;
  string name = 2;
  string display_name = 3;
  string provider_name = 4;
  double value = 5;
  CounterType type = 6;
  optional string tags = 7;
}
